# cooltek-sdk-probe

./: .gitignore  Cargo.toml  README.md
docs/MasterHUB/: lighting_modes.md
docs/MasterHUB/modules/: firmware.md  metadata.md  model_numbers.md
docs/MasterHUB/modules/m003k/: feature_reports.md  input_reports.md  output_reports.md
docs/MasterHUB/modules/m005s/: feature_reports.md  input_reports.md  output_reports.md
docs/MasterHUB/modules/m0064/: feature_reports.md  input_reports.md  output_reports.md  recovery.md
docs/MasterHUB/modules/m032le/: feature_reports.md  input_reports.md  output_reports.md
docs/MasterHUB/modules/m4315/: feature_reports.md  input_reports.md  output_reports.md
examples/: masterhub_m003k_adjust_led_color_to_rgb.rs  masterhub_m005s_get_slider_value.rs  masterhub_m0064_adjust_led_mode_to_static.rs  masterhub_m4315_display_picture_on_button.rs
openocd/MasterHUB/m0064/: connect.cfg  recover.cfg
src/: device_handle.rs  error.rs  lib.rs  lighting_mode.rs  m0.rs  m4315.rs
